# pam-webhook

./: .justfile  Cargo.toml  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: release.yml
src/: args.rs  config.rs  handlers.rs  lib.rs  logging.rs  null.rs  webhook.rs
src/handlers/: config.rs  hooks.rs  logging.rs  mod.rs  spool.rs  webhook.rs
tests/: ffi_hooks.rs
