[package]
name = "pam-webhook"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pam-sys = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.8"

# [lints.rust]
# unused_imports = "allow"
# dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
