[package]
name = "pam-webhook"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["webhook"]
logging = []
webhook = ["dep:reqwest"]

[dependencies]
chrono = "0.4.44"
hostname = "0.4.2"
pam = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "rustls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.7"

[dev-dependencies]
libloading = "0.9.0"
tempfile = "3.27.0"

# [lints.rust]
# unused_imports = "allow"
# dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
