[package]
name = "pam-webhook"
version = "0.3.0"
edition = "2024"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
description = "A PAM module that sends events to a webhook or a log file."
readme = "README.md"
repository = "https://github.com/ofersadan85/pam-webhook"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["logging", "webhook"]
logging = []
webhook = ["dep:reqwest"]
spool = ["dep:reqwest", "dep:serde_json"]

[dependencies]
chrono = "0.4.44"
hostname = "0.4.2"
pam = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, optional = true, features = [
    "json",
    "blocking",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2.0.18"
toml = "1.0.7"

[dev-dependencies]
libloading = "0.9.0"
tempfile = "3.27.0"

[patch.crates-io]
# There's a security vulnerability in pam 0.8.0 because it depends on `users`.
# This was patched but not released. The patch just switches the dependency to `uzers`
pam = { git = "https://github.com/1wilkens/pam", rev = "daf26ae3512d8e5a7478ccff1e4232ef5ebf9b03" }

# [lints.rust]
# unused_imports = "allow"
# dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = 3   # Use 3 to optimize performance, z to optimize for size, and s for something in-between
strip = true      # Ensures debug symbols are removed.
